# deep-learner

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions-ci.yaml
examples/: mnist_deep_learner.py  mnist_pytorch.py  train_comparison.py
notebooks/: hyperparameter_search.ipynb  understanding_the_difficulty_of_training_deep_feedforward_neural_networks.ipynb  varitional_autoencoders.ipynb
notebooks/VAE/: varitional_autoencoders.ipynb
src/deep_learner/: __init__.py  _gradient_checker.py  _tensor.py  tensor.py  utils.py
src/deep_learner/_core/: __init__.py  types.py  utils.py
src/deep_learner/datasets/: __init__.py  datasets.py
src/deep_learner/functional/: __init__.py  _backward_functions.py  functions.py  utils.py
src/deep_learner/metrics/: accuracy.py
src/deep_learner/nn/: __init__.py  module.py
src/deep_learner/nn/activation_function/: dropout.py  relu.py  sigmoid.py  softmax.py
src/deep_learner/nn/container/: sequential.py
src/deep_learner/nn/functional/: __init__.py  dropout.py  relu.py  sigmoid.py  softmax.py  softsign.py  tanh.py
src/deep_learner/nn/layer/: embedding.py  linear.py
src/deep_learner/nn/loss/: __init__.py  cross_entropy_loss.py  mean_squared_error.py
src/deep_learner/nn/optimizer/: optimizer.py  sgd.py
tests/unit/: test_backward_implementations.py  test_utils.py
