[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

# ========== Package information ==========
[project]
name = "deep-learner"
version = "0.1.0"
description = "A package that explores reverse-mode automatic differentiation."
authors = [
    { name = "Paul Wassermann", email = "paul9499@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

# ========== Dependencies ==========
dependencies = [
    "cupy-cuda12x>=13.3.0,<14",
    "numpy>=1.26.0,<2",
    "scipy>=1.11.3,<2",

    # Datasets dependencies
    "mnist>=0.2.2,<1",
    "cifar10-web>=0.0.4,<1",
    "scikit-learn>=1.6.0,<2",
]

[dependency-groups]
dev = [
    "isort>=5.12.0,<6",
    "matplotlib>=3.8.1,<4",
    "mypy>=1.5.1,<2",
    "pre-commit>=3.4.0,<4",
    "pylint>=3.0.1,<4",
    "pytest>=7.4.2,<8",
    "ruff>=0.12.7,<1",
]

notebooks = [
    "ipynb>=0.5.1,<1",
    "ipykernel>=6.29.5,<7",
    "tqdm>=4.67.1",
]

scripts = [
    "torch>=2.3.0,<3",
    "torchvision>=0.18.0,<1",
]

# ========== Tools configuration ==========
[tool.mypy]
mypy_path = "src"
disallow_any_expr = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pylint.main]
fail-under = 9
good-names =  ["_"]
max-line-length = 88
check-quote-consistency = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
