[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

# ========== Package information ==========
[project]
name = "deep-learner"
version = "0.1.0"
description = "A package that explores reverse-mode automatic differentiation."
authors = [
    { name = "Paul Wassermann", email = "paul9499@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

# ========== Dependencies ==========
dependencies = [
    "cupy-cuda12x>=13.3.0,<14",
    "numpy>=2.3.5",
    "scipy>=1.11.3,<2",
    # Datasets dependencies
    "mnist>=0.2.2,<1",
    "cifar10-web>=0.0.4,<1",
    "scikit-learn>=1.6.0,<2",
]

[dependency-groups]
dev = [
    "matplotlib>=3.8.1,<4",
    "pre-commit>=3.4.0,<4",
    "pytest>=7.4.2,<8",
    "ruff>=0.12.7,<1",
    "ty>=0.0.1a19",
]

notebooks = [
    "ipynb>=0.5.1,<1",
    "ipykernel>=6.29.5,<7",
    "tqdm>=4.67.1",
]

scripts = [
    "torch>=2.3.0,<3",
    "torchvision>=0.18.0,<1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# ========== Tools configuration ==========
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ty.src]
include = [
    "src"
]
